--- a/css/screen.css
+++ b/css/screen.css
@@ -628,7 +628,7 @@ article li li ol {
   grid-column: 1/3;
 }
 
-.cssgrid .content p, h1, h2, h3, h4, ul, ol, li {
+.cssgrid .content p, .cssgrid .content h1, .cssgrid .content h2, .cssgrid .content h3, .cssgrid .content h4, .cssgrid .content ul, .cssgrid .content ol, .cssgrid .content li {
   float: none;
 }
 
