--- a/css/screen.css
+++ b/css/screen.css
@@ -3,7 +3,6 @@
    License: none (public domain)
 */
 
-
 /* stylelint-disable */
 
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
@@ -52,12 +51,9 @@ table {
   border-spacing: 0
 }
 
-
 /* stylelint-enable */
 
-
 /* Begin site styles below */
-
 
 /*
   Base Styles
@@ -67,7 +63,6 @@ table {
   2. concerned with color and typography
   3. basic element presenation
 */
-
 
 /*
   Setting type with a 5:4 modular scale
@@ -142,7 +137,6 @@ form input, form textarea {
   /* 1 / 16 = 0.063 */
 }
 
-
 /* Responsive Media */
 
 img, video, audio {
@@ -177,7 +171,6 @@ article li li ol {
   list-style-type: lower-roman;
 }
 
-
 /*
  Layout Styles
 
@@ -208,23 +201,14 @@ article li li ol {
 }
 
 #nav {
-  opacity: 0;
   overflow: hidden;
-  position: absolute;
-  z-index: -1;
+  position: relative;
   top: 100%;
   left: 0;
   width: 100%;
   background-color: #fff;
-  box-shadow: 0 0.3125em 0.3125em #e1e6f2;
   padding: 1.125em 5%;
   /* 18 / 16 : 0.5625 */
-}
-
-#nav.opened {
-  opacity: 1;
-  z-index: 2;
-  transition: 0.4s;
 }
 
 #nav li {
@@ -281,7 +265,6 @@ article li li ol {
   background-image: url("../images/linkedin.png");
   /* will add hover effect later */
 }
-
 
 /* Responsive menu button */
 
@@ -362,9 +345,7 @@ article li li ol {
   background-color: #010101;
 }
 
-
 /* Modular Styles */
-
 
 /*
   Repeating style patterns.
@@ -418,7 +399,6 @@ article li li ol {
   padding-bottom: 0;
 }
 
-
 /* About */
 
 .about .photo {
@@ -434,7 +414,6 @@ article li li ol {
   padding: 1.125em;
   /* 18/16=1.125em*/
 }
-
 
 /* Resume */
 
@@ -461,7 +440,6 @@ article li li ol {
   padding-bottom: 0;
 }
 
-
 /* Portfolio */
 
 .portfolio {
@@ -486,7 +464,6 @@ article li li ol {
   /*font-size: 0.875em;*/
   /* 14 / 16 = 0.875 */
 }
-
 
 /* Contact */
 
@@ -573,7 +550,6 @@ article li li ol {
   color: #b31178;
 }
 
-
 /*
  CSS Grid layouts
  */
@@ -641,10 +617,12 @@ article li li ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-.cssgrid #header{
+
+.cssgrid #header {
   align-self: flex-start;
 }
-.cssgrid #footer{
+
+.cssgrid #footer {
   align-self: flex-end;
 }
 
@@ -677,7 +655,6 @@ article li li ol {
   display: flex;
 }
 
-
 /*
   States of the browser and user access
   conditions.
@@ -686,6 +663,29 @@ article li li ol {
   2. Influenced by JavaScript
   3. Organized by Base, Layout, Module, State
 */
+
+.js body:after {
+  content: "expanded-nav";
+  display: none;
+}
+.js #nav {
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 0.3125em 0.3125em #e1e6f2;
+  padding: 1.125em 5%;
+  /* 18 / 16 : 0.5625 */
+}
+.js #nav.opened {
+  opacity: 1;
+  z-index: 2;
+  transition: 0.4s;
+}
 
 @media screen and (min-width: 640px) {
   /* About */
@@ -761,6 +761,9 @@ article li li ol {
 }
 
 @media screen and (min-width: 1024px) {
+  .js body:after {
+    content: "";
+  }
   #header {
     padding: 1.125em 5%;
   }
@@ -782,14 +785,16 @@ article li li ol {
     box-shadow: none;
     padding-right: 0;
     padding-bottom: 0;
-    padding-top:0.5625em;
+    padding-top: 0.5625em;
     /*9 / 16 = 0.5625*/
     text-align: center;
   }
+
   #nav li {
     display: inline;
-    float: none;
+    /*float: none;*/
   }
+
   #nav a {
     display: inline;
     float: none;
@@ -806,9 +811,9 @@ article li li ol {
     max-width: 20%;
     padding-bottom: 0;
   }
-  #show-nav {
+  /*#show-nav {
     display: none;
-  }
+  }*/
   .flexbox #header {
     flex-wrap: nowrap;
     justify-content: space-between;
