--- a/css/screen.css
+++ b/css/screen.css
@@ -402,9 +402,9 @@ article li li ol {
 
 /* About */
 
-.about .photo {
-  position: relative;
-}
+/*.about .skills {
+  color:#fff;
+}*/
 
 .about .bg-image {
   position: absolute;
@@ -412,29 +412,31 @@ article li li ol {
   right: 0;
   top: 0;
   height: 100%;
-  width: 50%;
+  width: 100%;
   background: url('../images/backlit-keyboard.JPG');
   background-size: cover;
 }
-
-.about .bg-image h2 {
-  text-align: center;
-  position: absolute;
-  top: calc(5*18px);
-  right: 0;
-  width: 100%;
-  margin: auto;
-  color: #fff;
+.about .bg-image:after {
+  content:"";
+  position:absolute;
+  right:0;
+  top:0;
+  width:100%;
+  height:100%;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-.about .photo figcaption {
-  position: absolute;
-  z-index: 1;
-  color: #fff;
-  width: 100%;
-  bottom: 0;
-  padding: 1.125em;
-  /* 18/16=1.125em*/
+.about .skills {
+  position:relative;
+  color:#fff;
+  margin: auto;
+  text-transform: uppercase;
+}
+.about .skills li{
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 2.25em;
+  /* 36 / 16 = 2.25 */
 }
 
 /* Resume */
@@ -726,6 +728,21 @@ article li li ol {
   }
   .about .photo {
     float: left;
+  }
+  .about .bg-image {
+    width: 50%;
+  }
+
+  .about .skills {
+    position: initial;
+    right: 0;
+    text-align: right;
+  }
+  .about .skills li{
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 2.25em;
+    /* 36 / 16 = 2.25 */
   }
   /* Resume */
   .resume {
