--- a/css/screen.css
+++ b/css/screen.css
@@ -184,7 +184,7 @@ article li li ol {
   display: block;
   position: relative;
   background-color: #fff;
-  box-shadow: 0 0.3125em 0.3125em #e1e6f2;
+  box-shadow: 0 0.3125em 0.3125em #f2f2f2;
   padding: 0.625em 5%;
 }
 
