Moce blurr properties to img tag, instead of li wrapping i

--- a/css/screen.css
+++ b/css/screen.css
@@ -758,6 +758,9 @@ article li li ol {
   .portfolio .portfolio-entry {
     width: 50%;
     padding: 1.125em 5%;
+  }
+
+  .portfolio .portfolio-entry img{
     -webkit-filter: blur(3px);
     -moz-filter: blur(3px);
     -o-filter: blur(3px);
